force-app/main/default/objects/RecordDefinition__c/RecordDefinition__c.object-meta.xml
<CustomObject>
    <label>Record Definition</label>
    <nameField>
        <label>Record Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Record Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>