force-app/main/default/objects/RecordDefinition__c/fields/ConfigToInsert__c.field-meta.xml
<CustomField>
    <fullName>ConfigToInsert__c</fullName>
    <label>Config To Insert</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>