force-app/main/default/objects/RecordDefinition__c/fields/Field_Values__c.field-meta.xml
<CustomField>
    <fullName>Field_Values__c</fullName>
    <label>Field Values</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>