force-app/main/default/objects/RecordDefinition__c/fields/FieldValuesToEdit__c.field-meta.xml
<CustomField>
    <fullName>FieldValuesToEdit__c</fullName>
    <label>Field Values To Edit</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>