force-app/main/default/objects/RecordDefinition__c/fields/Record_Values__c.field-meta.xml
<CustomField>
    <fullName>Record_Values__c</fullName>
    <label>Record Values</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>